# linkedin-ai-crowdworks-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-report.yml
docs/: USER_REQUIRED_INFO.md
examples/: user_profile.example.json
fixtures/: sample_linkedin_results.json
src/ai_job_hunter/: __init__.py  application.py  application_cli.py  cli.py  draft.py  models.py  report.py  requirements.py  scoring.py  search.py
tests/: test_application.py  test_draft.py  test_fixture_provider.py  test_report.py  test_requirements.py  test_scoring.py
